fixed alignment

--- a/proiect/comparatii/style2.css
+++ b/proiect/comparatii/style2.css
@@ -60,3 +60,12 @@ html{
   table, th, td {
     border:1px solid black;
   }
+  td img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+td{
+  text-align: center;
+}
